# rag-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml  lint.yml  test.yml
core/: settings.py  settings_test.py
docs/: README.md
docs/.github/workflows/: lint.yml
tests/: test_apps.py  test_asgi.py  test_manage.py  test_urls.py  test_wsgi.py
users/: forms.py  urls.py  views.py
users/tests/: test_forms.py  test_urls.py  test_views.py
