[project]
name = "rag-project"
version = "0.1.0"
description = ""
authors = [
    {name = "rodrigols89",email = "rodrigols89.inbox@gmail.com"}
]
readme = "README.md"


requires-python = ">=3.12,<4.0"


dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"


[tool.taskipy.tasks]
# -------------- ( General Docker Management ) --------------
clean_compose = """
docker stop $(docker ps -aq) 2>/dev/null || true &&
docker rm $(docker ps -aq) 2>/dev/null || true &&
docker rmi -f $(docker images -aq) 2>/dev/null || true &&
docker volume rm $(docker volume ls -q) 2>/dev/null || true &&
docker system prune -a --volumes -f
"""
# --------------- ( Docker (dev) Management ) ---------------
start_dev = "docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d"
down_dev = "docker compose -f docker-compose.yml -f docker-compose.dev.yml down"
restart_dev = "docker compose -f docker-compose.yml -f docker-compose.dev.yml restart"
build_dev = "docker compose -f docker-compose.yml -f docker-compose.dev.yml up --build -d"
# -------------- ( Docker (prod) Management ) ---------------
start_prod = "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d"
down_prod = "docker compose -f docker-compose.yml -f docker-compose.prod.yml down"
restart_prod = "docker compose -f docker-compose.yml -f docker-compose.prod.yml restart"
build_prod = "docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
